<resources>
    <string name="app_name">WorldYachts</string>
    <string name="app_sign_up">Регистрация</string>
    <string name="app_sign_in">Войти</string>

    <string name="navigation_drawer_open">Открыть меню навигации</string>
    <string name="navigation_drawer_close">Закрыть меню навигации</string>
    <string name="nav_header_title">ReF0iL</string>
    <string name="nav_header_subtitle">salushkin.ds@students.dvfu.ru</string>
    <string name="nav_header_desc">Логин пользователя</string>
    <string name="action_settings">Настройки</string>
    <string name="action_remove">Удалить</string>

    <string name="menu_main">Главная</string>
    <string name="menu_bin">Корзина</string>
    <string name="menu_order">Заказы</string>

    <string name="menu_share">Поделиться</string>
    <string name="menu_send">Отправить</string>
    
    <string name="yacht_to_bin">Купить</string>
    <string name="yacht_detail">Подробнее</string>
    
    <string name="login">Логин</string>
    <string name="name">Имя</string>
    <string name="family_name">Фамилия</string>
    <string name="address">Адресс</string>
    <string name="date_of_birthday">Дата рождения</string>
    <string name="phone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="menu_communication">Коммуникация</string>
    <string name="menu_inner_to_account">Войти в аккаунт</string>
    <string name="menu_sign_up">Зарегистрироваться</string>
    <string name="menu_sign_in">Войти</string>
    <string name="rg_passport_number">Номер паспорта</string>
    <string name="rg_passport_series">Серия паспорта</string>
    <string name="cancel">Отмена</string>
    <string name="tmp">tmp</string>
    <string name="yacht_name">Yacht_Name</string>
    <string name="yacht_cost">25 000 000р</string>
    <string name="yacht_count">Кол-во: 4</string>
    <string name="tagline">Магазин яхт На Диване</string>
    <string name="email">Ваш e-mail</string>
    <string name="city">Город</string>
    <string name="accessory">Акксесуары</string>
</resources>
