<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_bin"
            android:icon="@drawable/ic_menu_bin"
            android:title="@string/menu_bin" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_order"
            android:title="@string/menu_order" />
    </group>

    <item android:title="@string/menu_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

    <item android:title="@string/menu_inner_to_account">
        <menu>
            <item
                android:id="@+id/nav_reg"
                android:icon="@drawable/ic_menu_rg"
                android:title="@string/menu_sign_up" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/menu_sign_in" />
        </menu>
    </item>

</menu>
