<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.txt.worldyachts_mobile.ui.home.HomeFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_bin"
        android:name="com.txt.worldyachts_mobile.ui.bin.BinFragment"
        android:label="@string/menu_bin"
        tools:layout="@layout/fragment_bin" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.txt.worldyachts_mobile.ui.order.OrderFragment"
        android:label="@string/menu_bin"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.txt.worldyachts_mobile.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_reg"
        android:name="com.txt.worldyachts_mobile.ui.registration.RegistrationFragment"
        android:label="@string/menu_sign_up"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.txt.worldyachts_mobile.ui.login.LoginFragment"
        android:label="@string/app_sign_in"
        tools:layout="@layout/fragment_login"
        />
</navigation>